Fix font, align screen text.

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	font-family: "Courier New", Courier, monospace;
 }
 
 #calculator {
@@ -23,6 +24,10 @@
 #calcName {
 	display: flex;
 	justify-content: space-between;
+	align-items: end;
+}
+#calcName h3 {
+	font-size: 2em;
 }
 
 #screen {
@@ -32,6 +37,7 @@
 	color: black;
 	font-size: 5em;
 	font-family: digital-7;
+	text-align: end;
 }
 #buttons {
 	display: flex;
